[package]
name = "wireguard-uapi"
version = "1.0.5"
edition = "2018"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
license = "MIT"
repository = "https://github.com/gluxon/wireguard-uapi-rs"
description = "Control WireGuard interfaces."
readme = "README.md"

[dependencies]
derive_builder = "0.7.1"
libc = "0.2.66"
neli = "=0.4.3"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
base64 = "0.10.1"
colored = "1.7"
predicates = "1"
rand = "0.6.5"
