[package]
name = "wireguard-uapi"
version = "1.0.5"
edition = "2018"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
license = "MIT"
repository = "https://github.com/gluxon/wireguard-uapi-rs"
description = "Control WireGuard interfaces."
readme = "README.md"

[[example]]
name = "userspace"
required-features = ["userspace"]

[features]
default = []
userspace = ["hex"]

[dependencies]
derive_builder = "0.7.1"
thiserror = "1.0"
hex = { version = "0.3.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
neli = "=0.4.3"
libc = "0.2.66"

[dev-dependencies]
anyhow = "1.0"
base64 = "0.10.1"
colored = "1.7"
predicates = "1"
rand = "0.6.5"
