[package]
name = "wireguard-uapi"
version = "2.0.2"
edition = "2018"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
license = "MIT"
repository = "https://github.com/gluxon/wireguard-uapi-rs"
description = "Control WireGuard interfaces."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "xplatform"
required-features = ["xplatform"]

[features]
default = []
xplatform = ["hex", "take-until"]

[dependencies]
derive_builder = "0.7.1"
thiserror = "1.0"
hex = { version = "0.4.3", optional = true }
take-until = { version = " 0.1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
neli = "=0.4.3"
libc = "0.2.66"

[dev-dependencies]
anyhow = "1.0"
base64 = "0.13.0"
colored = "2.0.0"
tempfile = "3.2.0"
predicates = "2.1.0"
rand = "0.8.4"
